Ingress/testing2/test.yml
---
kind: Namespace
apiVersion: v1
metadata:
  name: lbtest

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-a
  namespace: lbtest
  labels:
    app: app-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-a
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: app-a
    spec:
      containers:
        - image: nginx
          imagePullPolicy: IfNotPresent
          name: app-a
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: '1'
              memory: '512Mi'
            requests:
              cpu: '500m'
              memory: '256Mi'
          volumeMounts:
            - mountPath: /usr/share/nginx/html/a
              name: config-volume
      volumes:
        - name: config-volume
          configMap:
            name: index-a

      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 30
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 30

# Deployment app-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-b
  namespace: lbtest
  labels:
    app: app-b
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app-b
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: app-b
    spec:
      containers:
        - image: nginx
          imagePullPolicy: IfNotPresent
          name: app-b
          ports:
          - containerPort: 80
          resources:
            limits:
              cpu: '1'
              memory: '512Mi'
            requests:
              cpu: '500m'
              memory: '256Mi'
          volumeMounts:
            - mountPath: /usr/share/nginx/html/b
              name: config-volume
      volumes:
        - name: config-volume
          configMap:
            name: index-b

      tolerations:
      - effect: NoExecute
        key: node.kubernetes.io/not-ready
        operator: Exists
        tolerationSeconds: 30
      - effect: NoExecute
        key: node.kubernetes.io/unreachable
        operator: Exists
        tolerationSeconds: 30

---
apiVersion: v1
kind: Service
metadata:
  name: app-a
  namespace: lbtest
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: app-a
---
apiVersion: v1
kind: Service
metadata:
  name: app-b
  namespace: lbtest
spec:
  ports:
    - name: http
      port: 80
  selector:
    app: app-b

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: lbtest-ingress
  namespace: lbtest
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - http:
        paths:
          - path: /a
            pathType: Prefix
            backend:
              service:
                name: app-a
                port:
                  number: 80
          - path: /b
            pathType: Prefix
            backend:
              service:
                name: app-b
                port:
                  number: 80
